fixes footer overlap with pagination buttons

--- a/css/style.css
+++ b/css/style.css
@@ -698,7 +698,6 @@ canvas {
 }
 
 .credit {
-  position: absolute;
   bottom: 50px;
   height:100px;
   width: 90%;
